Fixed z-index on nested table headers. (#1087)

--- a/src/components/table/style.css
+++ b/src/components/table/style.css
@@ -8,10 +8,10 @@
 
 :host smoothly-table smoothly-table-head {
 	top: var(--smoothly-table-cell-min-height);
-	z-index: 1
+	z-index: 2
 }
 
 :host smoothly-table smoothly-table-head:nth-child(2) {
 	top: calc(var(--smoothly-table-cell-min-height) * 2);
-	z-index: 1
+	z-index: 2
 }
